Firefox cannot be pinned to the taskbar from the first onboarding card
Categories
(Firefox :: Shell Integration, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox121 | --- | unaffected |
| firefox122 | + | verified |
| firefox123 | --- | verified |
People
(Reporter: ppop, Assigned: nipunshukla002)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
|
384.10 KB,
image/gif
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
dmeehan
:
approval-mozilla-beta+
|
Details | Review |
[Affected versions]:
- Firefox Beta Version 122.0b1, Build ID 20231218153201
- Firefox Nightly Version 122.0a1, Build ID 20231217210522
[Affected platforms]:
- Windows 10 x64
- Windows 11 x64
[Prerequisites]:
- Have the latest Firefox Beta 122 installed.
- Do not have the Firefox browser pinned to the taskbar,
[Steps to reproduce]:
- Open the browser with the profile from prerequisites.
- Navigate to the about:welcome page and make sure the "Pin Firefox to taskbar" option is checked.
- Click the "Save and continue" button.
- Right-click the Firefox icon from the taskbar and observe the context menu.
[Expected result]:
- Firefox is pinned to the taskbar and the option to Unpin is displayed.
[Actual result]:
- Firefox is not pinned to the taskbar and the option to Pin is displayed.
[Regression]
- I've run a regression check using mozregression and it appears that the issue was caused by Bug 1863636.
Last good revision: eedf073554aca71a2d13b1d32d24e432d87c172b
First bad revision: c1276dfd362aae45feedd7e55a86a959480617f8
Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=eedf073554aca71a2d13b1d32d24e432d87c172b&tochange=c1276dfd362aae45feedd7e55a86a959480617f8
[Notes]:
- Attached a screen recording of the issue.
- The issue is only reproducible on Windows machines.
- The issue is also reproducible when trying to pin a Private window from the "Private browsing freedom in one click" promo.
| Reporter | ||
Comment 1•2 years ago
|
||
| Assignee | ||
Comment 2•2 years ago
|
||
Thanks for raising this bug, I'm investigating it now.
Updated•2 years ago
|
| Assignee | ||
Comment 3•2 years ago
|
||
Updated•2 years ago
|
| Assignee | ||
Comment 4•2 years ago
|
||
Comment on attachment 9369507 [details]
Bug 1870852 - Fixed about:welcome pinning regression r=mhughes
Beta/Release Uplift Approval Request
- User impact if declined: about:welcome and other notifications will no longer be able to successfully pin Firefox to the taskbar on Windows systems. This could lead to major disruptions in new user acquisition and should be fixed as soon as feasible.
- Is this code covered by automated tests?: Unknown
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: See steps to reproduce about:welcome bug in Description
Steps to reproduce Private Browsing bug:
- Open a new private window on a profile from prerequisites
- Within "Private browsing freedom in one click" experiment click "Pin to taskbar"
- Private Browsing should be successfully pinned to taskbar
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This is a simple logic change to correct a previous oversight. There shouldn't be any real risks associated with Mozilla because of this. The automated test coverage here isn't known perfectly but it doesn't seem like there are any to test specifically pinning from about:welcome.
- String changes made/needed:
- Is Android affected?: No
| Assignee | ||
Updated•2 years ago
|
Comment 5•2 years ago
|
||
:Nipun Shukla do you plan on landing this soon?
We can process the uplift request once it's landed and made it's way to central
| Assignee | ||
Comment 6•2 years ago
|
||
Ah, sorry about that. I thought I already landed it but it seems like I didn't. I've done it now.
Comment 8•2 years ago
|
||
| bugherder | ||
Updated•2 years ago
|
Comment 9•2 years ago
|
||
Comment on attachment 9369507 [details]
Bug 1870852 - Fixed about:welcome pinning regression r=mhughes
Approved for 122.0b3
Comment 10•2 years ago
|
||
| uplift | ||
Updated•2 years ago
|
Comment 11•2 years ago
|
||
I have verified that this issue is no longer reproducible using the latest Firefox Nightly 123.0a1 (Build ID: 20231227205835) and the latest Firefox Beta 122.0b3 (Build ID: 20231222091904) installed on Windows 10 x64, Windows 11 x64, and macOS 14.1.1. I can confirm that Firefox can be successfully pinned to the taskbar from the "Pin" screen of the "about:welcome" page.
Description
•