Bug 1870852 - Fixed about:welcome pinning regression r=mhughes, a=dmeehan

Differential Revision: https://phabricator.services.mozilla.com/D196897